# drf-test

./: README.md  pyproject.toml
backend/: settings.py  urls.py
backend/app/: admin.py  models.py  serializers.py  tests.py  views.py
backend/app/migrations/: 0001_initial.py  0002_item_user.py  0003_tradeoffer.py
